Update daily quote

--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@
         
         <!-- DAILY QUOTE - TOP -->
         <div class="quote-section">
-            <div class="quote-text" id="quoteText">"The secret of getting ahead is getting started."</div>
+            <div class="quote-text" id="quoteText">"Small daily improvements are the key to staggering long-term results."</div>
             <div class="quote-author">— Daily Wisdom</div>
         </div>
         
