Brand as Claw Deck 🦞

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <div class="container">
         <header>
             <div class="logo">
-                <span style="font-size: 2rem;">🚀</span>
-                <h1>FLIGHT DECK</h1>
+                <span style="font-size: 2rem;">🦞</span>
+                <h1>🦞 CLAW DECK</h1>
             </div>
             <div class="status-badge">
                 <div class="status-dot"></div>
