--- a/dashboard.html
+++ b/dashboard.html
@@ -140,8 +140,8 @@
     <div class="container">
         <header>
             <div class="logo">
-                <span style="font-size: 2rem;">🚀</span>
-                <h1>JASON'S FLIGHT DECK</h1>
+                <span style="font-size: 2rem;">🦞</span>
+                <h1>🦞 CLAW DECK</h1>
             </div>
             <div class="status-badge">
                 <div class="status-dot"></div>
