--- a/dashboard.html
+++ b/dashboard.html
@@ -309,10 +309,13 @@
         
         <!-- LINKS - BOTTOM -->
         <div class="links-section">
-            <div class="panel-title" style="margin-bottom: 8px;">🔗 LINKS</div>
+            <div class="panel-title" style="margin-bottom: 8px;">🔗 TOOLS & PROJECTS</div>
             <div class="links-grid">
-                <a href="https://jcyann.github.io/tunevault/" target="_blank" class="link-btn">🎻 TuneVault</a>
+                <a href="https://jcyann.github.io/tunevault/" target="_blank" class="link-btn">🎵 TuneVault</a>
                 <a href="https://jcyann.github.io/tunevault/voice-control.html" target="_blank" class="link-btn">🎤 Voice</a>
+                <a href="https://jcyann.github.io/tunevault/daily-zen.html" target="_blank" class="link-btn">🧘 Daily Zen</a>
+                <a href="https://jcyann.github.io/tunevault/money.html" target="_blank" class="link-btn">💰 Money</a>
+                <a href="https://jcyann.github.io/tunevault/task-master.html" target="_blank" class="link-btn">📝 Tasks</a>
                 <a href="https://www.reddit.com/r/Bluegrass/" target="_blank" class="link-btn">💚 r/Bluegrass</a>
                 <a href="https://www.reddit.com/r/banjo/" target="_blank" class="link-btn">🥄 r/banjo</a>
                 <a href="https://www.reddit.com/user/Dear_Morning2950/" target="_blank" class="link-btn">👤 Reddit</a>
