TuneVault: Music team now includes TuneVault focus

--- a/dashboard.html
+++ b/dashboard.html
@@ -371,13 +371,13 @@
                 { label: 'Focus', value: 'Bookings' },
                 { label: 'Next', value: 'Edit portfolio' }
             ]},
-            music: { emoji: '🎵', title: '🎵 Music Lessons', items: [
-                { label: 'Status', value: 'Future income' },
-                { label: 'Skills', value: 'Banjo/Fiddle/Guitar' },
-                { label: 'Platform', value: 'Reddit → booking' },
-                { label: 'Rate', value: '$30-75/hr' },
-                { label: 'Focus', value: 'Build audience' },
-                { label: 'Next', value: 'Research pricing' }
+            music: { emoji: '🎵', title: '🎵 Music (TuneVault)', items: [
+                { label: 'Status', value: 'Building' },
+                { label: 'TuneVault', value: '60+ tunes' },
+                { label: 'Vision', value: 'Comprehensive OT library' },
+                { label: 'Goal', value: '1000+ tunes' },
+                { label: 'Monetize', value: 'Tip jar + premium' },
+                { label: 'Next', value: 'Add more tunes' }
             ]},
             pod: { emoji: '🎨', title: '🎨 POD & Video', items: [
                 { label: 'Status', value: 'Low priority' },
