Links: Tip jar first, our projects, no generic subs

--- a/dashboard.html
+++ b/dashboard.html
@@ -309,16 +309,17 @@
         
         <!-- LINKS - BOTTOM -->
         <div class="links-section">
-            <div class="panel-title" style="margin-bottom: 8px;">🔗 TOOLS & PROJECTS</div>
+            <div class="panel-title" style="margin-bottom: 8px;">☕ TIP JAR & PROJECTS</div>
             <div class="links-grid">
+                <a href="https://ko-fi.com/headspacedesignstudio" target="_blank" class="link-btn" style="background: rgba(255,107,107,0.2); border-color: rgba(255,107,107,0.4);">☕ Tip Jar</a>
                 <a href="https://jcyann.github.io/tunevault/" target="_blank" class="link-btn">🎵 TuneVault</a>
-                <a href="https://jcyann.github.io/tunevault/voice-control.html" target="_blank" class="link-btn">🎤 Voice</a>
+                <a href="https://jcyann.github.io/tunevault/voice-control.html" target="_blank" class="link-btn">🎤 Voice Panel</a>
                 <a href="https://jcyann.github.io/tunevault/daily-zen.html" target="_blank" class="link-btn">🧘 Daily Zen</a>
                 <a href="https://jcyann.github.io/tunevault/money.html" target="_blank" class="link-btn">💰 Money</a>
                 <a href="https://jcyann.github.io/tunevault/task-master.html" target="_blank" class="link-btn">📝 Tasks</a>
-                <a href="https://www.reddit.com/r/Bluegrass/" target="_blank" class="link-btn">💚 r/Bluegrass</a>
-                <a href="https://www.reddit.com/r/banjo/" target="_blank" class="link-btn">🥄 r/banjo</a>
-                <a href="https://www.reddit.com/user/Dear_Morning2950/" target="_blank" class="link-btn">👤 Reddit</a>
+                <a href="https://www.reddit.com/user/Dear_Morning2950/" target="_blank" class="link-btn">👤 Our Reddit</a>
+                <a href="https://www.amazon.com/author/jason" target="_blank" class="link-btn">📚 Our Books</a>
+                <a href="https://www.redbubble.com/people/HeadSpaceDesign" target="_blank" class="link-btn">🎨 Redbubble</a>
                 <a href="https://github.com/Jcyann" target="_blank" class="link-btn">🐙 GitHub</a>
             </div>
         </div>
