--- a/dashboard.html
+++ b/dashboard.html
@@ -164,7 +164,7 @@
         
         <!-- ZEN QUOTE -->
         <div class="quote-section">
-            <div class="quote-text" id="quoteText">"Small daily improvements are the key to staggering long-term results."</div>
+            <div class="quote-text" id="quoteText">"The secret of getting ahead is getting started."</div>
             <div class="quote-author">— Daily Wisdom</div>
         </div>
         
