Add tip jar to TuneVault

--- a/tunevault.html
+++ b/tunevault.html
@@ -80,6 +80,11 @@
     <div class="container">
         <header><div class="logo">🎻</div><h1>TUNEVAULT</h1><p class="tagline">Your old time tune treasure trove</p></header>
         
+        <!-- Tip Jar -->
+        <div style="text-align: center; margin-bottom: 15px;">
+            <a href="https://ko-fi.com/headspacedesignstudio" target="_blank" style="display: inline-block; padding: 10px 22px; background: linear-gradient(135deg, #ff6b6b 0%, #ff8e53 100%); color: white; text-decoration: none; border-radius: 25px; font-weight: bold; font-size: 0.85rem;">☕ Support TuneVault</a>
+        </div>
+        
         <!-- Surprise Tune of the Day -->
         <div class="surprise-banner" id="surpriseBanner" onclick="showSurpriseTune()">
             <div class="surprise-icon">🎁</div>
