--- a/tunevault.html
+++ b/tunevault.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="TuneVault">
     <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎻</text></svg>">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
     <link rel="manifest" href="manifest.json">
     <title>🎻 TuneVault - Old Time Tune Library</title>
     <style>
@@ -310,3 +311,4 @@ window.addEventListener('beforeinstallprompt', (e) => {
     </script>
 </body>
 </html>
+<link rel="sitemap" type="application/xml" title="Sitemap" href="/tunevault/sitemap.xml">
