--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎻 TUNEVAULT</h1>
+            <h1>🎻 TUNEVAULT <span style="font-size:0.5em;color:var(--text-secondary)">v1.5</span></h1>
             <p class="tagline">One-Stop Old Time Fiddle Library</p>
             <a href="https://ko-fi.com/headspacedesignstudio" target="_blank" class="tip-btn">☕ Support</a>
         </header>
